fixed mult label

--- a/src/p.tex
+++ b/src/p.tex
@@ -2148,7 +2148,7 @@ $\transposed X^{-1}$
 \end{definition}
 列に関する以下の操作を列基本変形と呼ぶ.
 \begin{definition}
-  \label{def:mat:fundtransformation}
+  \label{def:mat:fundtransformation:col}
   $A$を$(m,n)$-行列とする.
   以下に挙げた$A$に対する操作を
   \defit{列基本変形}
